tests/golden/error/duplicate_import_alias/mod_a.tg
// Module A provides Foo.
pub type Foo = Nat
